--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -30,6 +30,7 @@
       </main>
 
     </div> <!-- /container -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
