--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,24 +1,26 @@
 <div class="container-fluid">
   <div class="row">
+
     <div class="col-md-1"></div>
+
     <div class="col-md-4">
       <div class="panel panel-primary">
         <div class="panel-heading clearfix">
           <h2 class="panel-title">
             LISTS
-            <button type="button" class="btn btn-success btn-sm pull-right">ADD</button>
+            <button data-behaviour="new-list" type="button" class="btn btn-success btn-sm pull-right">ADD</button>
           </h2>
         </div>
-        <ul class="list-group">
-          <li class="list-group-item">Cras justo odio</li>
-          <li class="list-group-item">Dapibus ac facilisis in</li>
-          <li class="list-group-item">Morbi leo risus</li>
-          <li class="list-group-item">Porta ac consectetur ac</li>
-          <li class="list-group-item">Vestibulum at eros</li>
+        <div class="panel-body" data-list="new-list-container">
+          <p>Here will add a new list with ok and cancel buttons below</p>
+        </div>
+        <ul class="list-group" data-list="list-index-container">
         </ul>
       </div>
     </div>
+
     <div class="col-md-1"></div>
+
     <div class="col-md-5">
       <div class="panel panel-info">
         <div class="panel-heading clearfix">
@@ -36,6 +38,7 @@
         </ul>
       </div>
     </div>
+
     <div class="col-md-1"></div>
   </div>
 </div>
