--- a/web/static/js/templates/list/list.hbs
+++ b/web/static/js/templates/list/list.hbs
@@ -1,3 +1,8 @@
-<li class="list-group-item" data-list-id = {{id}}>
+<button type="button" class="btn btn-warning btn-xs" data-behaviour="edit-list">
+  EDIT
+</button>
+<span data-list="name" data-list-name="{{name}}">
   {{name}}
-</li>
+</span>
+
+
