list edit and update actions

--- a/web/static/js/templates/list/index.hbs
+++ b/web/static/js/templates/list/index.hbs
@@ -1,5 +1,5 @@
 {{#each lists}}
-  <li class="list-group-item" data-list-id={{id}}>
+  <div data-list="list-container" data-list-id={{id}}>
     {{> listPartial}}
-  </li>
+  </div>
 {{/each}}
