--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -30,7 +30,8 @@
       </main>
 
     </div> <!-- /container -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <%#<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>%>
+    <script src="<%= static_path(@conn, "/vendor/jquery-3.1.1.min.js") %>"></script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
