--- a/web/static/js/templates/list/list.hbs
+++ b/web/static/js/templates/list/list.hbs
@@ -1,10 +1,13 @@
 <li class = "list-group-item">
-<button type="button" class="btn btn-warning btn-xs" data-behaviour="edit-list">
-  EDIT
-</button>
-<span data-list="name" data-list-name="{{name}}">
-  {{name}}
-</span>
+  <button type="button" class="btn btn-warning btn-xs" data-behaviour="edit-list">
+    EDIT
+  </button>
+  <button type="button" class="btn btn-danger btn-xs" data-behaviour="delete-list">
+    DELETE
+  </button>
+  <span data-list="name" data-list-name="{{name}}">
+    {{name}}
+  </span>
 </li>
 
 
