index of todos per list

--- a/web/static/js/templates/list/list.hbs
+++ b/web/static/js/templates/list/list.hbs
@@ -6,8 +6,11 @@
     DELETE
   </button>
   <span data-list="name" data-list-name="{{name}}">
-    {{name}}
+    <b>  {{name}}  </b>
   </span>
+  <button type="button" class="btn btn-info btn-xs pull-right" data-behaviour="open-todos">
+    OPEN
+  </button>
 </li>
 
 
