--- a/web/static/js/templates/todo/index.hbs
+++ b/web/static/js/templates/todo/index.hbs
@@ -1,4 +1,4 @@
-<div class="panel panel-info">
+<div class="panel panel-info" data-todos-list-id={{list.id}}>
   <div class="panel-heading clearfix">
     <h2 class="panel-title">
       {{list.name}} - TO DO LIST
