new todo for list

--- a/web/static/js/templates/todo/todo.hbs
+++ b/web/static/js/templates/todo/todo.hbs
@@ -5,7 +5,7 @@
   <button type="button" class="btn btn-danger btn-xs" data-behaviour="delete-todo">
     DELETE
   </button>
-  <span data-todo="name" data-list-todo="{{name}}">
+  <span data-todo="name" data-todo-name="{{name}}">
     {{#unless complete}}
       <b>  {{name}}  </b>
     {{else}}
