update todo status

--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -18,7 +18,7 @@
 
     <div class="col-md-1"></div>
 
-    <div class="col-md-5" data-todo="todo-container">
+    <div class="col-md-5" data-todo="todos-container">
     </div>
 
     <div class="col-md-1"></div>
